Setup english and portuguese, translate some pages

--- a/_i18n/en/about.html
+++ b/_i18n/en/about.html
@@ -1,13 +1,4 @@
----
-layout: page
-title: About me
-
-namespace: projects
-permalink: /projetos/
-permalink_en: /projects/
----
-
-Hello! I have 13+ years of experience working with software development. I work at Thoughtworks as a Platform Engineer, helping teams to get the resources they need to publish their applications and bring value to their customers and company.
+Hello! I'm Thiago :). I have 13+ years of experience working with software development. I work at Thoughtworks as a Platform Engineer, helping teams to get the resources they need to publish their applications and bring value to their customers and company.
 
 I have experience with Terraform, Puppet, Ansible and some experience with Kubernetes, provisioning VMs and kubernetes clusters in cloud providers like Azure, Digital Ocean, Google Cloud Platform and AWS.
 
