--- a/_i18n/en/projects.html
+++ b/_i18n/en/projects.html
@@ -1,3 +1,3 @@
 [JKS Test - How to setup your local environment to work with and test JKS "things"](https://github.com/thiagomarinho/jks-test) (pt/br)
 
-[Pipeline Viewer - See how your compiled Azure Devops YAML pipeline looks like](https://pipelineviewer.herokuapp.com) (en)
+[Pipeline Viewer - See how your compiled Azure Devops YAML pipeline looks like](https://pipelineviewer.thiagomarinho.net) (en)
